--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -60,7 +60,7 @@
                <div *ngIf="password.invalid && (password.dirty || password.touched)"
                class="alert alert-danger">
              <p *ngIf="password.errors.required">Password is required</p>  
-             <p *ngIf="password.errors.pattern">Password must be over 8 characters include an uppercase letter, a number and a special character</p>
+             <p *ngIf="password.errors.pattern">Password must be over 8 characters include an uppercase letter, a number and a special character (ex:@$!%*?&)</p>
         </div>
       </div>
 
